// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MinimalModal /> should match snapshot with body 1`] = `
<body
  class="vars_OD_Base__1gqkyza0"
  style="overflow: hidden;"
>
  <div />
  <div
    class="vars_OD_Base__1gqkyza0"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-hidden="true"
        class="reset_block__6swfds3 useBoxStyles_position_fixed__7o6k06dn Modal_backdrop_root__p7g8yg3 Modal_transition__p7g8yg1"
      />
      <div
        class="reset_block__6swfds3 useBoxStyles_position_fixed__7o6k06dn useBoxStyles_overflow_hidden__7o6k06ds Modal_root__p7g8yg0 Modal_transition__p7g8yg1"
        role="presentation"
      >
        <div
          aria-hidden="false"
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dy useBoxStyles_height_full__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ea useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 MinimalModal_container__1psw41b0"
          role="none presentation"
        >
          <article
            aria-labelledby="od-4"
            aria-modal="true"
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dy useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eq"
            role="dialog"
          >
            <main
              class="useBoxStyles_display_flex__7o6k06dy useBoxStyles_height_full__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eq useBoxStyles_flexGrow_1__7o6k06ez MinimalModal_content__1psw41b1"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis neque a laoreet maximus. Vestibulum hendrerit quam at mi venenatis faucibus at vel nisi. In ut risus et ipsum tincidunt tempor. Suspendisse potenti. Praesent faucibus posuere risus, at congue mauris porttitor ut. Donec sit amet elit vitae purus dictum aliquet quis ut ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dui sapien, porttitor ac erat vel, malesuada rutrum mauris. Nam arcu tellus, pretium ut aliquet eget, ultrices vel est. Maecenas dapibus volutpat eros a volutpat.
              </p>
            </main>
          </article>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<MinimalModal /> should match snapshot without title and body 1`] = `
<body
  class="vars_OD_Base__1gqkyza0"
  style="overflow: hidden;"
>
  <div />
  <div
    class="vars_OD_Base__1gqkyza0"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-hidden="true"
        class="reset_block__6swfds3 useBoxStyles_position_fixed__7o6k06dn Modal_backdrop_root__p7g8yg3 Modal_transition__p7g8yg1"
      />
      <div
        class="reset_block__6swfds3 useBoxStyles_position_fixed__7o6k06dn useBoxStyles_overflow_hidden__7o6k06ds Modal_root__p7g8yg0 Modal_transition__p7g8yg1"
        role="presentation"
      >
        <div
          aria-hidden="false"
          class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dy useBoxStyles_height_full__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06ea useBoxStyles_makeResponsiveStyle_key_bp__7o6k06f7 MinimalModal_container__1psw41b0"
          role="none presentation"
        >
          <article
            aria-labelledby="od-3"
            aria-modal="true"
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06dy useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eq"
            role="dialog"
          >
            <main
              class="useBoxStyles_display_flex__7o6k06dy useBoxStyles_height_full__7o6k06dl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06eq useBoxStyles_flexGrow_1__7o6k06ez MinimalModal_content__1psw41b1"
            />
          </article>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
